@@ -4,3 +4,8 @@ This repo contains source code for my talk "Continuations - The magic behind vir
 
 The talk discusses continuations and how they are used to implement virtual threads in Java. 
 If you have questions, suggestions to improve or any other feedback, please reach me out at [@BalaRawool](https://twitter.com/BalaRawool)
+
+## Prerequisites
+Make sure 
+- you use JDK 22 or higher
+- you compile and run these classes with these VM arguments: `--enable-preview --add-exports java.base/jdk.internal.vm=ALL-UNNAMED`
